# slice-and-dice-tools

./: .gitignore  .goreleaser.yaml  .spr.yml  README.md  go.mod  pyproject.toml
.github/workflows/: release.yml
display_curse/: blessing.csv  curse.csv  display_curse.go  display_curse.py  tweak.csv
